# ATV_DRF

./: README.md  manage.py  pyproject.toml
atv_drf/: asgi.py  settings.py  urls.py  wsgi.py
product/: admin.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py
